adding vue lib, table helpers, admin user list and forms
