# resources/js/app.js
@@ -20,6 +20,7 @@ window.Vue = require('vue').default;
 // files.keys().map(key => Vue.component(key.split('/').pop().split('.')[0], files(key).default))
 
 Vue.component('example-component', require('./components/ExampleComponent.vue').default);
+Vue.component('admin-users', require('./components/Admin/Users.vue').default);
 
 /**
  * Next, we will create a fresh Vue application instance and attach it to
