# resources/views/admin/users.blade.php
@@ -16,20 +16,10 @@
     </div><!-- /.row -->
   </div><!-- /.container-fluid -->
 </div>
-  <!-- /.content-header -->
+<!-- /.content-header -->
 
 <!-- Main content -->
-<div class="content">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col">
-
-      </div>
-      <!-- /.col-md-6 -->
-    </div>
-    <!-- /.row -->
-  </div><!-- /.container-fluid -->
-</div>
+<admin-users></admin-users>
 <!-- /.content -->
 @stop
 
